feature: devide yaml file and fix nugs